--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>해리야 숙제</h1>
+    <a href="./second.html"><h1>해리야 숙제</h1></a>
 </body>
 </html>
