--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="oliver-jsp/look_at_this_page_and_make_this/second.html"><h1>해리야 숙제</h1></a>
+    <a href="/second.html"><h1>해리야 숙제</h1></a>
 </body>
 </html>
